src/test/ui/resolve/issue-2356.stderr
error[E0425]: cannot find function `shave` in this scope
  --> $DIR/issue-2356.rs:27:5
   |
27 |     shave();
   |     ^^^^^ not found in this scope

error[E0425]: cannot find function `clone` in this scope
  --> $DIR/issue-2356.rs:34:5
   |
34 |     clone();
   |     ^^^^^ help: try: `self.clone`

error[E0425]: cannot find function `default` in this scope
  --> $DIR/issue-2356.rs:41:5
   |
41 |     default();
   |     ^^^^^^^ help: try: `Self::default`

error[E0425]: cannot find value `whiskers` in this scope
  --> $DIR/issue-2356.rs:49:5
   |
49 |     whiskers -= other;
   |     ^^^^^^^^
   |     |
   |     `self` value is only available in methods with `self` parameter
   |     help: try: `self.whiskers`

error[E0425]: cannot find function `shave` in this scope
  --> $DIR/issue-2356.rs:51:5
   |
51 |     shave(4);
   |     ^^^^^ help: try: `Self::shave`

error[E0425]: cannot find function `purr` in this scope
  --> $DIR/issue-2356.rs:53:5
   |
53 |     purr();
   |     ^^^^ not found in this scope

error[E0425]: cannot find function `static_method` in this scope
  --> $DIR/issue-2356.rs:62:9
   |
62 |         static_method();
   |         ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `purr` in this scope
  --> $DIR/issue-2356.rs:64:9
   |
64 |         purr();
   |         ^^^^ not found in this scope

error[E0425]: cannot find function `purr` in this scope
  --> $DIR/issue-2356.rs:66:9
   |
66 |         purr();
   |         ^^^^ not found in this scope

error[E0425]: cannot find function `purr` in this scope
  --> $DIR/issue-2356.rs:68:9
   |
68 |         purr();
   |         ^^^^ not found in this scope

error[E0424]: expected value, found module `self`
  --> $DIR/issue-2356.rs:75:8
   |
75 |     if self.whiskers > 3 {
   |        ^^^^ `self` value is only available in methods with `self` parameter

error[E0425]: cannot find function `grow_older` in this scope
  --> $DIR/issue-2356.rs:82:5
   |
82 |     grow_older();
   |     ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `shave` in this scope
  --> $DIR/issue-2356.rs:84:5
   |
84 |     shave();
   |     ^^^^^ not found in this scope

error[E0425]: cannot find value `whiskers` in this scope
  --> $DIR/issue-2356.rs:89:5
   |
89 |     whiskers = 0;
   |     ^^^^^^^^ help: try: `self.whiskers`

error[E0425]: cannot find value `whiskers` in this scope
  --> $DIR/issue-2356.rs:94:5
   |
94 |     whiskers = 4;
   |     ^^^^^^^^
   |     |
   |     `self` value is only available in methods with `self` parameter
   |     help: try: `self.whiskers`

error[E0425]: cannot find function `purr_louder` in this scope
  --> $DIR/issue-2356.rs:96:5
   |
96 |     purr_louder();
   |     ^^^^^^^^^^^ not found in this scope

error[E0424]: expected value, found module `self`
   --> $DIR/issue-2356.rs:102:5
    |
102 |     self += 1;
    |     ^^^^ `self` value is only available in methods with `self` parameter

error: aborting due to 17 previous errors

